[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["RyotaBannai <ryotala0528@gmail.com>"]
readme = "README.md"
packages = [{ include = "python11_training" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ruff = "^0.0.289"
mypy = "^1.5.1"
ipdb = "^0.13.13"
scipy = "^1.11.2"
numpy = "^1.26.0"
flake8 = "^6.1.0"
sortedcontainers = "^2.4.0"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "UP",   # pyupgrade
  "D",    # pydocstyle
  "I001", # isort https://beta.ruff.rs/docs/faq/#does-ruff-support-jupyter-notebooks
]

src = ["src", "tests"]

[tool.ruff.pydocstyle]
convention = "google"
