[package]
name = "abc180"
version = "0.1.0"
edition = "2021"
metadata = { cargo-compete = { bin = { 591 = { problem = "https://yukicoder.me/problems/no/591"}, 592 = { problem = "https://yukicoder.me/problems/no/592"}, 593 = { problem = "https://yukicoder.me/problems/no/593"}, 594 = { problem = "https://yukicoder.me/problems/no/594"}, 595 = { problem = "https://yukicoder.me/problems/no/595"}, 596 = { problem = "https://yukicoder.me/problems/no/596"}}}}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
