[package]
name = "collection"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "c"
path = "src/bin/c.rs"

[[bin]]
name = "max_flow"
path = "src/bin/graph/max_flow.rs"

[[bin]]
name = "bipartite_graph"
path = "src/bin/graph/bipartite_graph.rs"

[[bin]]
name = "maximum_matching"
path = "src/bin/graph/maximum_matching.rs"

[[bin]]
name = "connected_components"
path = "src/bin/graph/connected_components.rs"

[[bin]]
name = "spanning_tree_prim"
path = "src/bin/graph/spanning_tree_prim.rs"

[[bin]]
name = "spanning_tree_kruskal"
path = "src/bin/graph/spanning_tree_kruskal.rs"

[[bin]]
name = "sssp"
path = "src/bin/graph/sssp.rs"

[[bin]]
name = "sssp_heap"
path = "src/bin/graph/sssp_heap.rs"

[[bin]]
name = "sssp_bf"
path = "src/bin/graph/sssp_bf.rs"

[[bin]]
name = "apsp"
path = "src/bin/graph/apsp.rs"

[[bin]]
name = "dfs_timestamp"
path = "src/bin/graph/dfs_timestamp.rs"

[[bin]]
name = "articulation_point"
path = "src/bin/graph/articulation_point.rs"

[[bin]]
name = "bridge"
path = "src/bin/graph/bridge.rs"

[[bin]]
name = "minimum_cost_flow"
path = "src/bin/graph/minimum_cost_flow.rs"

[[bin]]
name = "minimum_cost_flow_queue"
path = "src/bin/graph/minimum_cost_flow_queue.rs"

[[bin]]
name = "range_query_1d"
path = "src/bin/query/range_query_1d.rs"

[[bin]]
name = "range_query_2d"
path = "src/bin/query/range_query_2d.rs"

[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"
easy-ext = "1.0.0"
ac-library-rs  = { git = "https://github.com/rust-lang-ja/ac-library-rs.git" }

[profile.release]
lto = true